# kafka_wire_protocol

./: Makefile  README.md  build.gradle  gradle.properties  settings.gradle
.github/: dependabot.yml
rust/: .gitignore  Cargo.toml
rust/src/: .gitignore  api_message_type.rs  arrays.rs  bytes.rs  lib.rs  markers.rs  primitives.rs  readable_writable.rs  str_arrays.rs  string.rs  strings.rs  tagged_fields.rs  types.rs  utils.rs
rust/src/schema/: mod.rs
rust/src/schema/add_offsets_to_txn_request/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
rust/src/schema/add_offsets_to_txn_response/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
rust/src/schema/add_partitions_to_txn_request/: mod.rs  v0.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
rust/src/schema/add_partitions_to_txn_response/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs
rust/src/schema/add_raft_voter_request/: v0.rs
rust/src/schema/add_raft_voter_response/: v0.rs
rust/src/schema/allocate_producer_ids_request/: v0.rs
rust/src/schema/allocate_producer_ids_response/: v0.rs
rust/src/schema/alter_client_quotas_request/: v0.rs  v1.rs
rust/src/schema/alter_client_quotas_response/: v0.rs  v1.rs
rust/src/schema/alter_configs_request/: v0.rs  v1.rs  v2.rs
rust/src/schema/alter_configs_response/: v0.rs  v1.rs  v2.rs
rust/src/schema/alter_partition_reassignments_request/: v0.rs  v1.rs
rust/src/schema/alter_partition_reassignments_response/: v0.rs  v1.rs
rust/src/schema/alter_partition_request/: v0.rs  v1.rs  v2.rs  v3.rs
rust/src/schema/alter_partition_response/: v0.rs  v1.rs  v2.rs  v3.rs
rust/src/schema/alter_replica_log_dirs_request/: v0.rs  v1.rs  v2.rs
rust/src/schema/alter_replica_log_dirs_response/: v0.rs  v1.rs  v2.rs
rust/src/schema/alter_share_group_offsets_request/: v0.rs
rust/src/schema/alter_share_group_offsets_response/: v0.rs
rust/src/schema/alter_user_scram_credentials_request/: v0.rs
rust/src/schema/alter_user_scram_credentials_response/: v0.rs
rust/src/schema/api_versions_request/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
rust/src/schema/api_versions_response/: mod.rs  v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
rust/src/schema/assign_replicas_to_dirs_request/: v0.rs
rust/src/schema/assign_replicas_to_dirs_response/: v0.rs
rust/src/test_utils/: java_tester.rs  mod.rs  proptest_strategies.rs  serde_bytes.rs  serde_option_bytes.rs  uuid.rs
rust/tests/: integration_test.rs
(+1566 files in other folders)
