[package]
name = "kafka_wire_protocol"
description = "Generated implementation of Apache Kafka wire protocol"
version = "2.0.0"
authors = ["Ivan Yurchenko <ivan@ivanyu.me>"]
readme = "../README.md"
repository = "https://github.com/ivanyu/kafka_wire_protocol"
license = "Apache-2.0"
keywords = ["kafka", "protocol"]
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["serde"] }
byteorder = "1.5.0"
varint-rs = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
paste = "1.0.15"

[dev-dependencies]
serde_json = "1.0.140"
rstest = "0.25.0"
proptest = "1.7.0"
proptest-derive = "0.6.0"
base64 = "0.22.1"
static_init = "1.0.4"
testcontainers = { version = "0.24.0", features = ["blocking"] }
